# SPL-courses-registration-system-server-client-

./: Project specification.html
Client/: CMakeLists.txt  makefile
Client/include/: connectionHandler.h  messageDecoder.h  messageEncoder.h
Client/src/: BGRsclient.cpp  client.cpp  connectionHandler.cpp  echoClient.cpp  messageDecoder.cpp  messageEncoder.cpp
SPL211-Tester_Assignment_3-V1-main/: CommandProcessor.java  README.md  RunClientTests.java  StreamReader.java  Tests.java
Server/src/main/java/Commands/: ADMINREG.java  COURSEREG.java  COURSESTAT.java  ISREGISTERED.java  KDAMCHECK.java  LOGIN.java  LOGOUT.java  MYCOURSES.java  STUDENTREG.java  STUDENTSTAT.java  UNREGISTER.java
Server/src/main/java/bgu/spl/net/DB/: Course.java  Database.java  Student.java  User.java
Server/src/main/java/bgu/spl/net/api/: EncoderDecoderIMP.java  ProtocolIMP.java
Server/src/main/java/bgu/spl/net/srv/: ActorThreadPool.java  BaseServer.java  BlockingConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
spl-net/: Courses.txt
spl-net/src/main/java/Commands/: ACKCOMMAND.java  ADMINREG.java  COURSEREG.java  COURSESTAT.java  ERRORCOMMAND.java  ISREGISTERED.java  KDAMCHECK.java  LOGIN.java  LOGOUT.java  MYCOURSES.java  STUDENTREG.java  STUDENTSTAT.java  UNREGISTER.java
spl-net/src/main/java/bgu/spl/net/DB/: Admin.java  Course.java  Database.java  Student.java
src/: CMakeLists.txt  connectionHandler.cpp  echoClient.cpp  main.cpp  main.h  messageDecoder.cpp  messageDecoder.h  messageEncoder.cpp  messageEncoder.h
(+27 files in other folders)
